--- a/packages/livechat/src/styles/colors.scss
+++ b/packages/livechat/src/styles/colors.scss
@@ -1,5 +1,6 @@
-$color-text-dark: #2f343d;
-$color-text-grey: #9ea2a8;
+$color-text-darker: #18191B;
+$color-text-dark: #3C3F44;
+$color-text-grey: #54585F;
 $color-text-light: #cbced1;
 $color-text-lighter: #ffffff;
 $color-text-grey-system: #6c727a;
@@ -21,5 +22,6 @@ $color-yellow: #ffd21f;
 $color-dark-yellow: #f6c502;
 $color-green: #2de0a5;
 $color-dark-green: #26d198;
+$color-black: #000000;
 
 $overlay-bg-color: rgba(12, 13, 15, 0.2);
